2010-03-25  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* process.c (Fmake_network_process): Don't call turn_on_atimers around
	`connect' (Bug#5723).

2010-03-25  Helmut Eller  <eller.helmut@gmail.com>

	* process.c (Fmake_network_process): Call `select' for interrupted
	`connect' rather than creating new socket (Bug#5173).

2010-03-24  Jan Djärv  <jan.h.d@swipnet.se>

	* frame.c (x_get_arg): Handle RES_TYPE_BOOLEAN_NUMBER (bug #5736).

	* xfns.c (Fx_create_frame): Make menuBar a RES_TYPE_BOOLEAN_NUMBER.

	* dispextern.h (resource_types): RES_TYPE_BOOLEAN_NUMBER is new.

2010-03-24  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xfns.c (Fx_create_frame) [USE_LUCID]: Add BLOCK_INPUT around
	XLoadQueryFont.

2010-03-24  Kenichi Handa  <handa@m17n.org>

	* coding.c (decode_coding_ccl): Fix previous change for the
	multibyte case.
	(encode_coding_ccl): Don't setup ccl program here.  Fix for the
	case that the output buffer is fullfilled.
	(encode_coding): Setup ccl program here.

2010-03-24  Andreas Politz  <politza@fh-trier.de>  (tiny change)

	* editfns.c (Fformat): Account for string precision when computing
	field width (Bug#5710).

2010-03-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/gnu-linux.h (LIBS_SYSTEM): Remove, same as default.

	Simplify LIBS_MACHINE definitions.
	* m/hp800.h (LIBS_MACHINE): Remove, same as default.
	* m/iris4d.h (LIBS_MACHINE): Likewise.
	* m/ibmrs6000.h (LIBS_MACHINE): Rename to LIBS_SYSTEM and move ...
	* s/aix4-2.h (LIBS_SYSTEM): ... here.
	* s/netbsd.h: Remove commented out code.

2010-03-22  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove dead code dealing with POSIX_SIGNALS.
	* atimer.c (set_alarm): Remove dead code, all USG systems define
	POSIX_SIGNALS.
	* data.c (arith_error): Likewise.
	* keyboard.c (input_available_signal, handle_user_signal)
	(interrupt_signal): Likewise.
	* process.c (sigchld_handler): Likewise.
	(create_process): Remove if 0 code.  Remove HPUX conditional when